# documentador

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  SECURITY_CHECKLIST.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/context/: examples.py
app/estimation/: __init__.py  config.py  main.py
app/estimation/messaging/: __init__.py  job_store.py  outbox_store.py  rabbitmq.py  redis_job_store.py
app/estimation/services/: __init__.py  llm_service.py
app/gateway/: __init__.py  config.py  main.py
app/gateway/clients/: __init__.py  estimation_client.py
app/gateway/resilience/: __init__.py  circuit_breaker.py
app/routers/: estimations.py
app/schemas/: estimation.py
app/services/: llm_service.py
app/shared/: __init__.py  observability.py  security.py
app/shared/schemas/: __init__.py  estimation.py
docs/architecture/: phase4_macro_integration.md  phase4_macro_integration.tikz
docs/manual-proyecto/: 00-indice-general.md  INDICE_MANUAL_PROYECTO.md
docs/manual-proyecto/parte1-hardware/: 1.1-plataforma-ciudad-inteligente.md  1.10-sistema-de-control-inteligente-del-trafico.md  1.11-tarjeta-turistica-de-san-lorenzo-de-el-escorial.md  1.13-modernizacion-y-ampliacion-de-la-red-wifi-municipal.md  (+5 more)
manualTecnico/: main.tex
manualTecnico/abstract/: abstract.tex
reports/: environment_audit.md
scripts/: generate-ontology-latex.js  security_audit.py
tests/: conftest.py  test_gateway_integration.py  test_health.py  test_redis_job_store.py  test_security.py  test_security_advanced.py
(+63 files in other folders)
